[workspace]
members = [
    "bins/*",
    "crates/*",
    "e2e",
]
exclude = [
    "crates/svm-common",
    "crates/svm-shared",
    "crates/svm",
    "examples/svm",
    # exclude revm e2e testing suite to let it be a separate crate
    "evm-e2e",
]
resolver = "2"

[workspace.package]
version = "0.5.1"
authors = [
    "Dmitry Savonin <dmitry@fluentlabs.xyz>",
]
repository = "https://github.com/fluentlabs-xyz/fluentbase"
edition = "2021"
rust-version = "1.92.0"
readme = "README.md"
license = "MIT"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]

[workspace.dependencies]
# fluentbase
fluentbase-build = { path = "./crates/build", default-features = false }
fluentbase-codec = { path = "./crates/codec", default-features = false, features = ["derive"] }
fluentbase-codec-derive = { path = "./crates/codec-derive", default-features = false }
fluentbase-contracts = { path = "./crates/contracts", default-features = false }
fluentbase-crypto = { path = "./crates/crypto", default-features = false }
fluentbase-evm = { path = "./crates/evm", default-features = false }
fluentbase-genesis = { path = "./crates/genesis", default-features = false }
fluentbase-revm = { path = "./crates/revm", default-features = false }
fluentbase-runtime = { path = "./crates/runtime", default-features = false }
fluentbase-sdk = { path = "./crates/sdk", default-features = false }
fluentbase-sdk-derive = { path = "./crates/sdk-derive", default-features = false }
fluentbase-testing = { path = "./crates/testing" }
fluentbase-types = { path = "./crates/types", default-features = false }
#fluentbase-svm = { path = "./crates/svm", default-features = false }
#fluentbase-svm-shared = { path = "./crates/svm-shared", default-features = false }
#fluentbase-svm-common = { path = "./crates/svm-common", default-features = false }
fluentbase-universal-token = { path = "./crates/universal-token", default-features = false }

# solana
#solana-pubkey = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-instruction = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-account-info = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-clock = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-epoch-schedule = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-sanitize = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-short-vec = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-hash = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-program-error = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-transaction-error = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-sysvar-id = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-serialize-utils = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-sha256-hasher = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-decode-error = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-program-entrypoint = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-feature-set = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-program-memory = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-stable-layout = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-bincode = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-precompile-error = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-poseidon = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-curve25519 = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-bn254 = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-program-option = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-program-pack = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-pubkey = { path = "../agave/sdk/pubkey", default-features = false }
#solana-instruction = { path = "../agave/sdk/instruction", default-features = false }
#solana-account-info = { path = "../agave/sdk/account-info", default-features = false }
#solana-clock = { path = "../agave/sdk/clock", default-features = false }
#solana-epoch-schedule = { path = "../agave/sdk/epoch-schedule", default-features = false }
#solana-sanitize = { path = "../agave/sdk/sanitize", default-features = false }
#solana-short-vec = { path = "../agave/short-vec", default-features = false }
#solana-hash = { path = "../agave/sdk/hash", default-features = false }
#solana-program-error = { path = "../agave/sdk/program-error", default-features = false }
#solana-transaction-error = { path = "../agave/sdk/transaction-error", default-features = false }
#solana-sysvar-id = { path = "../agave/sdk/sysvar-id", default-features = false }
#solana-serialize-utils = { path = "../agave/sdk/serialize-utils", default-features = false }
#solana-sha256-hasher = { path = "../agave/sdk/sha256-hasher", default-features = false }
#solana-decode-error = { path = "../agave/sdk/decode-error", default-features = false }
#solana-program-entrypoint = { path = "../agave/sdk/program-entrypoint", default-features = false }
#solana-feature-set = { path = "../agave/sdk/feature-set", default-features = false }
#solana-program-memory = { path = "../agave/sdk/program-memory", default-features = false }
#solana-stable-layout = { path = "../agave/sdk/stable-layout", default-features = false }
#solana-bincode = { path = "../agave/sdk/bincode", default-features = false }
#solana-precompile-error = { path = "../agave/sdk/precompile-error", default-features = false }
#solana-poseidon = { path = "../agave/poseidon", default-features = false }
#solana-curve25519 = { path = "../agave/curves/curve25519", default-features = false }
#solana-bn254 = { path = "../agave/curves/bn254", default-features = false }
#solana-program-option = { path = "../agave/sdk/program-option", default-features = false }
#solana-program-pack = { path = "../agave/sdk/program-pack", default-features = false }

#solana_rbpf = { git = "https://github.com/fluentlabs-xyz/rbpf", branch = "feat/svm", default-features = false }
#solana_rbpf = { path = "../rbpf", default-features = false }

# rwasm
rwasm = { git = "https://github.com/fluentlabs-xyz/rwasm", branch = "devel", default-features = false }

# alloy
alloy-primitives = { version = "1.5.0", default-features = false, features = ["sha3-keccak"] }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-sol-types = { version = "1.5.0", default-features = false, features = ["json"] }
alloy-genesis = { version = "1.4.3", default-features = false }
alloy-evm = { version = "0.27.2", default-features = false }

# misc
blake3 = { version = "1.5.4", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
bytemuck = { version = "1.10.1", default-features = false, features = ["derive"] }
bytemuck_derive = { version = "1.8", default-features = false }
num_enum = { version = "0.7.3", default-features = false, features = [] }
arrayref = { version = "0.3.9", default-features = false, features = [] }
proptest = { version = "1.5.0" }
unty = "0.0.4"

# sp1
sp1-curves = { version = "5.2.4" }
generic-array = { version = "=1.1.0", default-features = false, features = ["alloc"] }

num-derive = { version = "0.4" }
num-traits = { version = "0.2", features = ["i128"], default-features = false }

hashbrown = { version = "0.16.0", default-features = false, features = ["default-hasher", "inline-more"] }
schnellru = { version = "0.2" }
serde = { version = "1.0.203", default-features = false, features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11.15", default-features = false }
serde_with = { version = "3.11.0", default-features = false }
spin = { version = "0.10.0", default-features = false, features = ["mutex"] }
static_assertions = { version = "1.1.0", default-features = false }
memoffset = { version = "0.9.1", default-features = false }
paste = { version = "1.0", default-features = false }
auto_impl = { version = "1.2", default-features = false }
bytes = { version = "1.10.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "1.0.0" }
strum_macros = { version = "0.27.1" }
lazy_static = { version = "1.5.0", default-features = false, features = ["spin_no_std"] }
anyhow = { version = "1.0.86", default-features = false }
syn = "2.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
bitvec = { version = "1", default-features = false, features = ["alloc"] }
bincode = { version = "2.0.1", default-features = false, features = ["alloc", "derive"] }
convert_case = "0.8.0"
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0" }
elliptic-curve = { version = "0.13.4", features = ["hazmat", "sec1", "ecdh"], default-features = false }
cfg-if = { version = "1.0.3", default-features = false }

# revm
#revm = { package = "revm-rwasm", version = "27.0.3", default-features = false }
#revm-primitives = { package = "revm-rwasm-primitives", version = "20.0.0", default-features = false }
#revm-precompile = { package = "revm-rwasm-precompile", version = "24.0.1", default-features = false }
#revm-bytecode = { package = "revm-rwasm-bytecode", version = "6.0.1", default-features = false }
#revm-interpreter = { package = "revm-rwasm-interpreter", version = "23.0.2", default-features = false }
#revm-context = { package = "revm-rwasm-context", version = "8.0.3", default-features = false }
revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched", default-features = false }
revm-primitives = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched", default-features = false }
revm-precompile = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched", default-features = false }
revm-bytecode = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched", default-features = false }
revm-interpreter = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched", default-features = false }
revm-context = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched", default-features = false }
revm-context-interface = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched", default-features = false }
#revm = { path = "../revm-rwasm/crates/revm", default-features = false }
#revm-primitives = { path = "../revm-rwasm/crates/primitives", default-features = false }
#revm-precompile = { path = "../revm-rwasm/crates/precompile", default-features = false }
#revm-bytecode = { path = "../revm-rwasm/crates/bytecode", default-features = false }
#revm-interpreter = { path = "../revm-rwasm/crates/interpreter", default-features = false }
#revm-context = { path = "../revm-rwasm/crates/context", default-features = false }
#revm-context-interface = { path = "../revm-rwasm/crates/context-interface", default-features = false }

# precompiles
ark-bn254 = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
k256 = { version = "0.13.4", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
secp256k1 = { version = "0.31.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }

# revme
clap = { version = "4", features = ["derive"] }

# reth
reth-storage-rpc-provider = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-basic-payload-builder = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-chain-state = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-chainspec = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-cli = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-cli-commands = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-cli-runner = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-cli-util = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-codecs = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-codecs-derive = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-config = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-consensus = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-consensus-common = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-consensus-debug-client = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-db = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-db-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-db-common = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-db-models = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-discv4 = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-discv5 = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-dns-discovery = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-downloaders = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-e2e-test-utils = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-ecies = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-engine-local = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-engine-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-engine-tree = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-engine-service = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-engine-util = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-era = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-era-downloader = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-era-utils = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-errors = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-eth-wire = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-eth-wire-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-ethereum-payload-builder = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-ethereum-cli = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-ethereum-engine-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-ethereum-forks = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-ethereum = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-etl = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-evm = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-evm-ethereum = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-execution-errors = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-execution-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-exex = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-exex-test-utils = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-exex-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-fs-util = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-invalid-block-hooks = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-ipc = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-libmdbx = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-mdbx-sys = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-metrics = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-net-banlist = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-net-nat = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-network = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-network-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-network-p2p = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-network-peers = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-network-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-nippy-jar = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-node-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-node-builder = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-node-core = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-node-ethereum = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-node-ethstats = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-node-events = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-node-metrics = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-node-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-payload-builder = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-payload-builder-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-payload-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-payload-validator = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-payload-util = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-primitives-traits = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-provider = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-prune = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-prune-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-revm = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-rpc = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-rpc-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-rpc-api-testing-util = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-rpc-builder = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-rpc-e2e-tests = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-rpc-engine-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-rpc-eth-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-rpc-eth-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-rpc-layer = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-rpc-server-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-rpc-convert = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-stages = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-stages-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-stages-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-static-file = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-static-file-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-storage-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-storage-errors = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-tasks = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-tokio-util = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-tracing = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-tracing-otlp = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-transaction-pool = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-trie = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-trie-common = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-trie-db = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-trie-parallel = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched" }
reth-trie-sparse = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }
reth-zstd-compressors = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v1.11-patched", default-features = false }

# alloy-rpc-types
alloy-rpc-types = { version = "1.4.3", features = ["eth"], default-features = false }
alloy-rpc-types-eth = { version = "1.4.3", default-features = false }
alloy-rpc-types-engine = { version = "1.4.3", default-features = false }

# reth deps
tracing = { version = "0.1.0", default-features = false }
tokio = { version = "1.44.2", default-features = false }
aquamarine = { version = "0.6" }
backon = { version = "1.2", default-features = false, features = ["std-blocking-sleep", "tokio-sleep"] }
tempfile = { version = "3.20" }
eyre = "0.6"

# misc
bitflags = { version = "2.6.0", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
rand = "0.9.2"
num-bigint = { version = "0.4.6", default-features = false, features = [] }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc"] }
flate2 = "1.1.9"
parking_lot = "0.12"

# dev-dependencies
serde_derive = { version = "1.0", default-features = false }
thiserror = "2.0"
array-bytes = "9.3.0"

[patch."https://github.com/fluentlabs-xyz/fluentbase"]
fluentbase-build = { path = "./crates/build" }
fluentbase-codec = { path = "./crates/codec" }
fluentbase-codec-derive = { path = "./crates/codec-derive" }
fluentbase-contracts = { path = "./crates/contracts" }
fluentbase-crypto = { path = "./crates/crypto" }
fluentbase-evm = { path = "./crates/evm" }
fluentbase-genesis = { path = "./crates/genesis" }
fluentbase-revm = { path = "./crates/revm" }
fluentbase-runtime = { path = "./crates/runtime" }
fluentbase-sdk = { path = "./crates/sdk" }
fluentbase-sdk-derive = { path = "./crates/sdk-derive" }
fluentbase-testing = { path = "./crates/testing" }
fluentbase-types = { path = "./crates/types" }
fluentbase-universal-token = { path = "./crates/universal-token" }

[patch.crates-io]
# revm
revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-bytecode = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-database = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-state = { package = "revm-state", git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-primitives = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-interpreter = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-inspector = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-context = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-context-interface = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-database-interface = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
op-revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }

# tiny-keccak
tiny-keccak = { git = "https://github.com/fluentlabs-xyz/tiny-keccak.git", branch = "rwasm" }

# rwasm
rwasm = { git = "https://github.com/fluentlabs-xyz/rwasm", branch = "devel" }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.bench]
lto = "fat"
codegen-units = 1

[profile.release]
panic = "unwind"
lto = "thin"
opt-level = 3
strip = "symbols"
debug = "none"
debug-assertions = false
rpath = false
codegen-units = 16

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
#debug = "line-tables-only"
#split-debuginfo = "unpacked"

[profile.dev.build-override]
#debug = false
opt-level = 3

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
debug = "full"
inherits = "release"
strip = "none"

[profile.ethtests]
inherits = "test"
opt-level = 3

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.reproducible]
inherits = "release"
panic = "abort"
codegen-units = 1
incremental = false